user dashboard front

--- a/Social/assets/css/forget.css
+++ b/Social/assets/css/forget.css
@@ -3,7 +3,7 @@
     margin: auto;
     display: flex;
     flex-direction: column;
-    gap: 1em;
+    gap: 2em;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0px 0px 5px #a0a0a0ad;
@@ -21,11 +21,15 @@
 }
 
 form{
+    margin: auto;
+    width: 80%;
     display: flex;
     flex-direction: column;
-    gap:1em;
+    gap:3em;
     padding: 0.5em;
     overflow: auto;
+    justify-content: center;
+    text-align: left;
 }
 
 .group{
@@ -35,20 +39,13 @@ form{
     align-items: center;
 }
 
-.gchild{
-    display: flex;
-    flex-direction: column;
-    padding: 0.2em;
-    gap: 0.2em;
-}
-
-.gchild label{
+label{
     margin-left: 3px;
     color: #5d2fdb;
     font-size: 1.3rem;
 }
 
-.gchild input{
+input{
     height:30px;
     outline: none;
     padding: 5px;
@@ -58,56 +55,7 @@ form{
     font-size: 1.2rem;
 }
 
-.radiobox{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-}
-
-.radiobox input[type="radio"]{
-    position: relative;
-    width:10px;
-    height: 10px;
-}
-
-.radiobox input[type="radio"]:after{
-    position: absolute;
-    margin: auto;
-    bottom:0;
-    width: 10px;
-    height: 10px;
-    content: "";
-    display: inline-block;
-    border-radius: 50%;
-    visibility: visible;
-}
-
-.radiobox input[type="radio"]:checked:after{
-    position: absolute;
-    margin: auto;
-    bottom:0;
-    width: 10px;
-    height: 10px;
-    content: "";
-    display: inline-block;
-    border-radius: 50%;
-    background-color:red;
-    visibility: visible;
-}
-
-.radiobox label{
-    text-decoration: none;
-    display: flex;
-    flex-direction: row;
-    gap: 0.5em;
-    align-items: center;
-}
-
-.radiobox *{
-    height:20px;
-}
-
-.signup{
+.reset{
     margin: auto;
     width:200px;
     border: none;
@@ -118,7 +66,7 @@ form{
     font-size: 1.2rem;
 }
 
-.signup:hover{
+.reset:hover{
     cursor: pointer;
     background-color:#12b16f;
     transition: all 0.2s ease;
@@ -127,24 +75,14 @@ form{
     box-shadow: 0px 2px 5px rgb(150, 147, 147);
 }
 
-p{
-    padding:5px;
+.back{
+    text-decoration: underline;
+    color: red;
+    text-align: center;
+    font-size: 1.2rem;
 }
-
-.login, .red{
-    color: #f11f1f !important;
-    text-decoration: underline !important;
-}
-
-
 
 @media screen and (max-width: 752px){
-    .container {
-        padding:2em;
-    }
-    .main{
-        width:80%;
-    }
     .group{
         display:grid;
         grid-template-columns: 1fr;
