--- a/Social/assets/css/login.css
+++ b/Social/assets/css/login.css
@@ -10,6 +10,7 @@
     box-shadow: 0px 0px 5px #a0a0a0ad;
     background: url('../image/site/social-network.png') no-repeat center/cover;
     filter: drop-shadow(2px 2px 2px #d8d5d5ad);
+    font-size: 1.3rem;
 }
 
 .content h2{
@@ -17,6 +18,7 @@
     padding:1em;
     color: #fff;
     text-shadow: 0px 3px 5px rgb(29, 29, 29);
+    font-size: 2rem;
 }
 
 form{
@@ -43,6 +45,7 @@ form{
     color: #5d2fdb;
     border-radius:10px;
     font-family: 'Give You Glory';
+    font-size: 1.2rem;
 }
 
 .group label{
@@ -50,7 +53,6 @@ form{
     background-color: #6634c4;
     padding:5px;
     border-radius: 10px;
-    font-size: 1.2em;
 }
 
 .forget{
@@ -64,11 +66,12 @@ button{
     color: #fff;
     border: none;
     padding: 5px;
-    height:30px;
+    min-height:30px;
     width: 100px;
     outline: none;
     border-radius: 3px;
     font-family: 'Give You Glory';
+    font-size: 1.2rem;
 }
 
 button:hover{
@@ -90,6 +93,7 @@ button:hover{
     padding: 0.5em;
     color: #1279b1;
     gap: 0.5em;
+    font-size: 1.2rem;
 }
 
 .signup{
