--- a/Social/views/users/timeline.html
+++ b/Social/views/users/timeline.html
@@ -52,7 +52,7 @@
                     <img src="../../assets/image/user/profile/female.png" alt="" class="profilepic">
                     <div class="group">
                         <a href="" class="namelink">First Name Last Name</a>
-                        <p>30min</p>
+                        <p>30 min</p>
                     </div>
                 </div>
                 <div class="post">
@@ -60,8 +60,8 @@
                     <img src="../../assets/image/user/profile/male.png" alt="">
                 </div>
                 <div class="action">
-                        <a href="">I like</a>
-                        <a href="">Comment</a>
+                        <a href="" class="like"><i class="fas fa-thumbs-up"></i>I like</a>
+                        <a href=""><i class="fas fa-comment"></i>Comment</a>
                 </div>
             </div>
 
@@ -78,8 +78,8 @@
                     <img src="../../assets/image/user/profile/female.png" alt="">
                 </div>
                 <div class="action">
-                        <a href="">I like</a>
-                        <a href="">Comment</a>
+                        <a href=""><i class="fas fa-thumbs-up"></i>I like</a>
+                        <a href=""><i class="fas fa-comment"></i>Comment</a>
                 </div>
             </div>
 
@@ -96,8 +96,8 @@
                     <img src="../../assets/image/user/profile/male.png" alt="">
                 </div>
                 <div class="action">
-                        <a href="">I like</a>
-                        <a href="">Comment</a>
+                        <a href=""><i class="fas fa-thumbs-up"></i>I like</a>
+                        <a href=""><i class="fas fa-comment"></i>Comment</a>
                 </div>
             </div>
 
