--- a/Social/assets/css/friends.css
+++ b/Social/assets/css/friends.css
@@ -1,7 +1,3 @@
-html{
-    scroll-behavior: smooth;
-}
-
 *{
     margin: 0;
     padding: 0;
@@ -26,7 +22,7 @@ header{
     width: 100%;
     position: sticky;
     top: 0;
-    z-index: 2;
+    z-index: 1;
 }
 
 .normal{
@@ -71,115 +67,6 @@ input[type="search"]{
     transition: all 0.1s ease-in;
     background: #f4312e;
     cursor: pointer;
-}
-
-.postfield{
-    background-color: #fff;
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 2em;
-    padding: 1em;
-    box-shadow: 1px 1px 5px lightgrey;
-    border-radius: 5px;
-}
-
-.postfield textarea{
-    border: 1px solid lightgrey;
-    border-radius: 3px;
-    box-shadow: 0px 0px 5px rgba(155, 155, 155, 0.249);
-    padding: 1em;
-    outline: none;
-}
-
-.postfield textarea:focus{
-    box-shadow: 0px 0px 10px rgba(138, 138, 138, 0.351);
-    border: 1px solid #0479f795;
-}
-
-.postfield h3{
-    color: #047af7;
-    text-align: center;
-}
-
-.imgbox{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: auto;
-    width: 100%;
-    padding: 0.5em;
-}
-
-.imgpostbox{
-    width: 50px;
-    height: 50px; 
-    background: url('../image/site/uploadimg.png') no-repeat center/cover;
-}
-
-.file{
-    width: 50px;
-    height: 50px; 
-    border: 1px solid;
-    opacity: 0;
-    cursor: pointer;
-}
-
-.uploadtext{
-    color: #047af7;
-}
-
-.display_image{
-    transition: 0.3s;
-    position: relative;
-    width: 320px;
-    height: 250px;
-    margin-bottom: 10px;
-    top:10px;
-    box-shadow: 0px 0px 10px rgb(186, 185, 185);
-    background-position: center;
-    background-size: cover;
-    border-radius: 5px;
-}
-
-.btnclose{
-    transition: 0.3s;
-    z-index: 1;
-    position: absolute;
-    top: -10px;
-    right: -5px;
-    border-radius: 50%;
-    width: 20px;
-    height: 20px;
-    border: 1px solid #f7040495;
-    background-color: #f5151595;
-    background-position: center;
-    background-size: cover;
-    cursor:pointer;
-}
-
-.btnclose::after{
-    content: "X";
-    color: #fff;
-    font-weight: bolder;
-}
-
-.postbtn{
-    border: none;
-    color: #fff;
-    background-color: #5d2fdb;
-    padding: 1.3em;
-    border-radius: 10px;
-    margin: auto;
-    text-align: center;
-    width: 90%;
-    max-width: 300px;
-}
-
-.postbtn:hover{
-    cursor: pointer;
-    background-color: #047af7;
-    transition: all 0.3s;
 }
 
 .profilepic{
@@ -287,92 +174,71 @@ input[type="search"]{
     display: flex;
     flex-direction: column;
     gap: 2em;
+    width: 70% ;
 }
 
-.userpost{
+.friendcount{
+    color: #047af7;
+    font-family: 'Give You Glory';
+}
+
+.userbox{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1em;
+}
+
+.friend{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
     gap: 1em;
-    background-color: #fff;
-    padding: 2em 1em;
+    background: rgb(255, 255, 255);
+    box-shadow: 0 8px 12px 0 rgba(155, 155, 155, 0.37);
+    backdrop-filter: blur( 14px );
+    -webkit-backdrop-filter: blur( 14px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    padding: 0.5em;
+    margin-bottom: 0.5em;
+    text-align: center;
+    border: 1px solid #5d2fdb;
+
+}
+
+.friend:hover{
+    transform: scale(1.05);
+    transition: all 0.3s;
+}
+
+.friendimg{
+    width: 100%;
+    max-width: 200px;
+    height: 200px;
+    border-radius: 50%;
+}
+
+.friendname{
+    color: #047af7;
+}
+
+.friendemail, .friendbirth{
+    color: #c9c9c9;
+}
+
+.btnshow{
+    text-decoration: none;
+    color: white;
+    background-color: #047af7;
+    padding: 1em;
     border-radius: 5px;
-    box-shadow: 1px 1px 5px lightgrey;
 }
 
-.profilpic{
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    padding:0.5em 1em;
-    border-bottom: 1px solid lightgrey;
-    color: #bababa;
+.btnshow:hover{
+    background-color: #156bc7;
+    transition: all 0.2s;
 }
 
-.group{
-    display: flex;
-    flex-direction: column;
-    gap: 0.2em;
-}
-
-.namelink{
-    text-decoration: none;
-    color: #047af7;
-}
-
-.namelink:hover{
-    text-decoration: underline;
-    color: #047af7;
-}
-
-.post{
-    display:flex;
-    flex-direction: column;
-    gap: 1em;
-    margin: auto;
-    align-items: center;
-    width: fit-content;
-    width: 90%;
-    max-width: 800px;
-}
-
-.post img{
-    width: 100%;
-    max-width: 700px;
-    background-color: #fff;
-}
-
-.post p{
-    width: 100%;
-    text-align: justify;
-    text-indent: 1em;
-}
-
-.action{
-    margin-top: 1em;
-    border-top: 1px solid lightgrey;
-    display: flex;
-    justify-content: space-around;
-    padding: 0.5em 2em;
-}
-
-.action a{
-    text-decoration: underline;
-    color: rgb(121, 121, 121);
-}
-
-.action .fas{
-    color: lightgrey;
-}
-
-.action a:hover{
-    color: #047af7;
-    text-decoration: none;
-}
-
-.action a:hover .fas{
-    color: #047af7;
-}
 
 
 @media screen and (max-width:900px){
@@ -386,8 +252,9 @@ input[type="search"]{
         justify-content: space-around;
         align-items: center;
         padding:0.5em;
-        background-color: rgb(255, 255, 255);
+        background-color: #fff;
     }
+
 
     .small a{
         text-decoration: none;
@@ -420,6 +287,20 @@ input[type="search"]{
         color: #ee4f4f;
         transform: scale(1.05);
     }
+
+    .userbox{
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 1em;
+    }
+
+    .container{
+        width: 100%;
+    }
+
+    .content{
+        width: 60%;
+    }
 }
 
 @media screen and (max-width:550px){
@@ -437,4 +318,9 @@ input[type="search"]{
     header img{
         display: none;
     }
+
+    .content{
+        width: 80%;
+    }
+
 }
