--- a/Social/views/users/timeline.html
+++ b/Social/views/users/timeline.html
@@ -77,34 +77,20 @@
                 </div>
                 <div class="action">
                         <a href="" class="like"><i class="fas fa-thumbs-up"></i>I like</a>
-                        <a href=""><i class="fas fa-comment"></i>Comment</a>
+                        <a href="" class="btncomment"><i class="fas fa-comment"></i>Comment</a>
                 </div>
+                <form action="" class="comment none">
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                    <input type="submit" class="cmtsub" value="post" name="commentbtn">
+                </form>
             </div>
 
             <div class="userpost">
                 <div class="profilpic">
-                    <img src="../../assets/image/user/profile/male.png" alt="" class="profilepic">
+                    <img src="../../assets/image/user/profile/female.png" alt="" class="profilepic">
                     <div class="group">
-                        <a href="">First Name Last Name</a>
-                        <p>12h</p>
-                    </div>
-                </div>
-                <div class="post">
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum ea voluptate minus aliquam illo dolor, porro unde tempora voluptates expedita ab corrupti reiciendis odio excepturi voluptas earum et, accusamus tempore!</p>
-                    <img src="../../assets/image/user/profile/female.png" alt="">
-                </div>
-                <div class="action">
-                        <a href=""><i class="fas fa-thumbs-up"></i>I like</a>
-                        <a href=""><i class="fas fa-comment"></i>Comment</a>
-                </div>
-            </div>
-
-            <div class="userpost">
-                <div class="profilpic">
-                    <img src="../../assets/image/user/profile/male.png" alt="" class="profilepic">
-                    <div class="group">
-                        <a href="">First Name Last Name</a>
-                        <p>12h</p>
+                        <a href="" class="namelink">First Name Last Name</a>
+                        <p>30 min</p>
                     </div>
                 </div>
                 <div class="post">
@@ -112,11 +98,16 @@
                     <img src="../../assets/image/user/profile/male.png" alt="">
                 </div>
                 <div class="action">
-                        <a href=""><i class="fas fa-thumbs-up"></i>I like</a>
-                        <a href=""><i class="fas fa-comment"></i>Comment</a>
+                        <a href="" class="like"><i class="fas fa-thumbs-up"></i>I like</a>
+                        <a href="" class="btncomment"><i class="fas fa-comment"></i>Comment</a>
                 </div>
+                <form action="" class="comment none">
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                    <input type="submit" class="cmtsub" value="post" name="commentbtn">
+                </form>
             </div>
 
+            
         </div>
 
     </div>
