--- a/Social/assets/css/photos.css
+++ b/Social/assets/css/photos.css
@@ -238,10 +238,9 @@ input[type="search"]{
 }
 
 .picture img{
-    width: 100%;
-    max-width: 500px;
-    min-height: 300px;
-    max-height: 500px;
+    width: 400px;
+    height: 400px;
+    border-radius: 20px;
 }
 
 .picture:hover{
