--- a/Social/assets/css/photos.css
+++ b/Social/assets/css/photos.css
@@ -270,6 +270,8 @@ input[type="search"]{
     text-decoration: underline;
 }
 
+#logout{display:none}
+
 @media screen and (max-width:900px){
     .menu{
         display: none;
@@ -317,6 +319,14 @@ input[type="search"]{
         transform: scale(1.05);
     }
 
+    .container{
+        width: 100%;
+    }
+
+    .content{
+        width: 100%;
+    }
+
     .picturebox{
         display: grid;
         grid-template-columns: 1fr;
@@ -326,6 +336,17 @@ input[type="search"]{
         transform: scale(1.03);
         transition: all 0.2s;
     }
+
+    .picturebox{
+        width: fit-content;
+        margin:auto;
+    }
+    
+    .picture img{
+        width:100%;
+        margin:auto;
+    }
+
 }
 
 @media screen and (max-width:550px){
@@ -348,15 +369,5 @@ input[type="search"]{
         display:inline-block !important;
     }
 
-    .container{
-        width: 100%;
-    }
-
-    .content{
-        width: 100%;
-    }
-
-    .picturebox{
-        width: 100%;
-    }
+    #logout{display:flex !important}
 }
