--- a/Social/assets/css/settings.css
+++ b/Social/assets/css/settings.css
@@ -340,6 +340,67 @@ input[type="search"]{
     font-weight: bolder;
 }
 
+.params{
+    border-top:1px solid #ccc;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    align-items: center;
+    margin: auto;
+    width: 80%;
+}
+
+.updateform{
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    width: 100%;
+}
+
+.ufgroup{
+    width: 100%;
+    display: flex;
+    text-align: left;
+    justify-content:space-between;
+}
+
+.ufgroup label{
+    color: #5d2fdb;
+    text-shadow: 0px 0px 5px rgba(100, 98, 98, 0.486);
+}
+
+.ufgroup input{
+    width: 300px;
+    height:30px;
+    padding: 0.3em;
+    border-radius: 3px;
+    outline: none;
+    border: 1px solid #c4c4c4;
+}
+
+.ufgroup input:focus{
+    width: 305px;
+    border: 1px solid #3352ff;
+    box-shadow: 1px 2px 5px rgba(212, 209, 209, 0.596);
+}
+
+.updatebtn{
+    background-color: #047af7;
+    color: #fff;
+    padding: 0.5em;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    width: 60%;
+    margin: auto;
+}
+
+.updatebtn:hover{
+    background-color: #7a2edf;
+    transition: all 0.2S;
+}
+
+
 
 
 @media screen and (max-width:900px){
@@ -402,6 +463,18 @@ input[type="search"]{
     #active .fas{
         color: #ee4f4f;
         transform: scale(1.05);
+    }
+
+    .ufgroup{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        gap: 0.1em;
+    }
+
+    .ufgroup input, .updatebtn{
+        width: 100%;
     }
 
 }
