--- a/Social/assets/css/photos.css
+++ b/Social/assets/css/photos.css
@@ -6,6 +6,7 @@ html{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Roboto, "Helvetica Neue",serif !important;
 }
 
 body{
@@ -104,8 +105,8 @@ input[type="search"]{
 
 .profilepic{
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 90px;
+    height: 90px;
     background-color: white;
     border: 2px solid #047af7;
     padding: 2px;
