--- a/Social/assets/css/profil.css
+++ b/Social/assets/css/profil.css
@@ -39,6 +39,19 @@ header{
     padding: 1em;
 }
 
+#searchresult{
+    background-color: white;
+    color: #047af7;
+    width: fit-content;
+    display: flex;
+    flex-direction:column;
+    border-radius:5px;
+    box-shadow:0px 0px 5px rgba(211, 211, 211, 0.76);
+}
+
+#searchresult p{
+    padding: 5px;
+}
 
 #searchresult{
     background-color: white;
@@ -120,8 +133,8 @@ input[type="search"]{
 
 .profilepic{
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 90px;
+    height: 90px;
     background-color: white;
     border: 2px solid #047af7;
     padding: 2px;
