--- a/Social/assets/css/settings.css
+++ b/Social/assets/css/settings.css
@@ -35,6 +35,20 @@ header{
     padding: 1em;
 }
 
+#searchresult{
+    background-color: white;
+    color: #047af7;
+    width: fit-content;
+    display: flex;
+    flex-direction:column;
+    border-radius:5px;
+    box-shadow:0px 0px 5px rgba(211, 211, 211, 0.76);
+}
+
+#searchresult p{
+    padding: 5px;
+}
+
 #dropmenu{
     display: flex;
     flex-direction: column;
@@ -102,8 +116,8 @@ input[type="search"]{
 
 .profilepic{
     border-radius: 50%;
-    width: 50px;
-    height: 50px;
+    width: 90px;
+    height: 90px;
     background-color: white;
     border: 2px solid #047af7;
     padding: 2px;
