--- a/Social/assets/css/style.css
+++ b/Social/assets/css/style.css
@@ -7,7 +7,8 @@ html{
     padding: 0;
     box-sizing:border-box;
     font-weight: bolder;
-    
+    font-family: Roboto, "Helvetica Neue",serif !important;
+
 }
 
 body {
